@@ -51,7 +51,7 @@ const enableStripeLinkPaymentMethod = ( options ) => {
 					}
 			  };
 
-		if ( options.complete_shipping ) {
+		if ( options.complete_shipping() ) {
 			fillWith( shippingAddress, options.shipping_fields.line1, 'line1' );
 			fillWith( shippingAddress, options.shipping_fields.line2, 'line2' );
 			fillWith( shippingAddress, options.shipping_fields.city, 'city' );
@@ -67,7 +67,8 @@ const enableStripeLinkPaymentMethod = ( options ) => {
 				'country'
 			);
 		}
-		if ( options.complete_billing ) {
+
+		if ( options.complete_billing() ) {
 			fillWith( billingAddress, options.billing_fields.line1, 'line1' );
 			fillWith( billingAddress, options.billing_fields.line2, 'line2' );
 			fillWith( billingAddress, options.billing_fields.city, 'city' );
@@ -83,6 +84,7 @@ const enableStripeLinkPaymentMethod = ( options ) => {
 				'country'
 			);
 		}
+		jQuery( 'select' ).trigger( 'change' );
 	} );
 };
 
