@@ -414,6 +414,19 @@ class WC_Stripe_Intent_Controller {
 			if ( '' !== $selected_upe_payment_type ) {
 				// Only update the payment_method_types if we have a reference to the payment type the customer selected.
 				$request['payment_method_types'] = [ $selected_upe_payment_type ];
+				if (
+					WC_Stripe_UPE_Payment_Method_CC::STRIPE_ID === $selected_upe_payment_type &&
+					in_array(
+						WC_Stripe_UPE_Payment_Method_Link::STRIPE_ID,
+						$gateway->get_upe_enabled_payment_method_ids(),
+						true
+					)
+				) {
+					$request['payment_method_types'] = [
+						WC_Stripe_UPE_Payment_Method_CC::STRIPE_ID,
+						WC_Stripe_UPE_Payment_Method_Link::STRIPE_ID,
+					];
+				}
 				$order->update_meta_data( '_stripe_upe_payment_type', $selected_upe_payment_type );
 			}
 			if ( ! empty( $customer ) && $customer->get_id() ) {
